2005-01-19  Jeff Huang  <keltus@users.sourceforge.net>

	* ircbot.py (IRCDict.__iter__): Added __iter__ method for IRCDict.

2005-01-17  Joel Rosdahl  <joel@rosdahl.net>

	* ircbot.py (IRCDict.__contains__): Added __contains__method for
	IRCDict. Patch from Jeff Huang.
	(SingleServerIRCBot.on_ctcp): Corrected default decoding of CTCP
	DCC CHAT. Patch from Jeff Huang.

	* irclib.py (VERSION):
	* python-irclib.spec.in:
	Preparations for version 0.4.3.

	* debian: Removed Debian package directory since python-irclib is
	in Debian now.

	* ircbot.py (SingleServerIRCBot._on_namreply): Improved comment
	about arguments to the function. Patch from Jeff Huang.
	(Channel.has_allow_external_messages): Renamed from
	has_message_from_outside_protection. Patch from Jeff Huang.

	* irclib.py (ServerConnection.quit): Added comment about how some
	IRC servers' treat QUIT messages. Patch from Jeff Huang.

	* ircbot.py (SingleServerIRCBot.jump_server): Improved jump_server
	behaviour. Patch from Jeff Huang.

2004-08-04  Joel Rosdahl  <joel@rosdahl.net>

	* irclib.py (ServerConnection.process_data): Added "bonus" action
	event that is triggered on CTCP ACTION messages.

2004-07-09  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.2.

	* debian/rules: Remove built *.pyc files before making package.

	* irclib.py (DEBUG):
	* debian/changelog:
	* python-irclib.spec.in:
	Preparations for version 0.4.2.

	* irclib.py (ServerNotConnectedError): New exception.
	(ServerConnection.send_raw): Fix bug #922446, "Raise
	IllegalStateException in send_raw when disconnected".

2003-10-30  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.1.

	* debian/examples: Added dccreceive and dccsend as example files
	in Debian.

	* python-irclib.spec.in: Likewise.

2003-10-29  Joel Rosdahl  <joel@rosdahl.net>

	* debian: Added Debian packaging files.

	* setup.py.in: Create setup.py from setup.py.in.

	* python-irclib.spec.in: RPM spec file from Gary Benson.
